# chip-8-emulator

./: .gitignore  CMakeLists.txt  build.sh
include/: CMakeLists.txt  chip8.h  chip8beep.h  chip8keyboard.h  chip8memory.h  chip8registers.h  chip8screen.h  chip8stack.h  config.h
src/: CMakeLists.txt  chip8.c  chip8beep.c  chip8keyboard.c  chip8memory.c  chip8screen.c  chip8stack.c  main.c
src/main/: main.c
